SERVER-13448 broadcast updates/deletes to all shards when more than one targeted