src/mongo/s/write_ops/write_op.cpp
@@ -83,7 +83,7 @@ namespace mongo {
             }
             else {
                 // TODO: Retry index writes with stale version?
-                targetStatus = targeter.targetAll( &endpoints );
+                targetStatus = targeter.targetCollection( &endpoints );
             }
 
             if ( !targetStatus.isOK() ) {
@@ -93,6 +93,16 @@ namespace mongo {
 
             // Store single endpoint result if we targeted a single endpoint
             if ( endpoint ) endpoints.push_back( endpoint );
+        }
+
+        // If we're targeting more than one endpoint with an update/delete, we have to target
+        // everywhere since we cannot currently retry partial results.
+        // NOTE: Index inserts are currently specially targeted only at the current collection to
+        // avoid creating collections everywhere.
+        if ( targetStatus.isOK() && endpoints.size() > 1u && !isIndexInsert ) {
+            endpointsOwned.clear();
+            invariant( endpoints.empty() );
+            targetStatus = targeter.targetAllShards( &endpoints );
         }
 
         // If we had an error, stop here
@@ -107,7 +117,7 @@ namespace mongo {
 
             WriteOpRef ref( _itemRef.getItemIndex(), _childOps.size() - 1 );
 
-            // For now, multiple endpoints imply no versioning
+            // For now, multiple endpoints imply no versioning - we can't retry half a multi-write
             if ( endpoints.size() == 1u ) {
                 targetedWrites->push_back( new TargetedWrite( *endpoint, ref ) );
             }
